--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "immutability-helper": "3.1.1",
     "lodash.startcase": "4.4.0",
     "material-ui-chip-input": "1.1.0",
-    "moment": "2.29.1",
+    "moment": "2.29.2",
     "react": "17.0.2",
     "react-codemirror": "1.0.0",
     "react-cookie": "4.1.1",
@@ -40,10 +40,11 @@
     "lodash": ">=4.17.21",
     "set-value": ">=4.0.1",
     "mixin-deep": ">=2.0.1",
+    "minimist": ">=1.2.6",
     "immer": ">=9.0.6",
-    "axios": ">=0.21.4",
+    "axios": ">=0.27.2",
     "tar": ">=6.1.9",
-    "url-parse": ">=1.5.2",
+    "url-parse": ">=1.5.9",
     "ua-parser-js": ">=0.7.24",
     "js-yaml": "3.14.1",
     "kind-of": ">=6.0.3",
@@ -61,7 +62,11 @@
     "tmpl": ">=1.0.5",
     "color-string": ">=1.5.5",
     "ws": ">=7.4.6",
-    "hosted-git-info": ">=2.8.9"
+    "hosted-git-info": ">=2.8.9",
+    "async": ">=2.6.4",
+    "selfsigned": ">=2.0.1",
+    "node-forge": ">=1.3.0",
+    "follow-redirects": ">=1.14.7"
   },
   "scripts": {
     "start": "REACT_APP_VIDISPINE_URL=${VIDISPINE_URL} REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts start",
