--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "eslint": "7.11.0",
+    "eventsource": ">=1.1.1",
     "prop-types": ">=15.7.2",
     "classnames": ">=2.3.1",
     "lodash.debounce": ">=4.0.8",
@@ -67,7 +68,9 @@
     "async": ">=2.6.4",
     "selfsigned": ">=2.0.1",
     "node-forge": ">=1.3.0",
-    "follow-redirects": ">=1.14.7"
+    "follow-redirects": ">=1.14.7",
+    "http-signature": ">=1.3.6",
+    "ejs": ">=3.1.7"
   },
   "scripts": {
     "start": "REACT_APP_VIDISPINE_URL=${VIDISPINE_URL} REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts start",
